[project]
name = "litestar-offline-docs"
description = "Offline API docs for Litestar"
authors = [{ name = "community-of-python" }]
readme = "README.md"
requires-python = ">=3.9,<4"
dynamic = ["version"]
dependencies = [
    "litestar>=2.9.1",
]

[dependency-groups]
dev = [
    "anyio>=4.4.0",
    "mypy>=1.13.0",
    "pre-commit>=3.5.0",
    "pytest>=8.2.2",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.6.1",
    "ruff>=0.7.1",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.mypy]
files = ["litestar_offline_docs", "tests"]
python_version = "3.9"
strict = true
pretty = true
show_error_codes = true

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "EM",
    "FBT",
    "TRY003",
    "D1",
    "D106",
    "D203",
    "D213",
    "G004",
    "FA",
    "COM812",
    "ISC001",
]

[tool.ruff.lint.isort]
no-lines-before = ["standard-library", "local-folder"]
lines-after-imports = 2

[tool.ruff.lint.extend-per-file-ignores]
"tests/*.py" = ["S101", "S311"]

[tool.coverage.report]
exclude_also = ["if typing.TYPE_CHECKING:", 'class \w+\(typing.Protocol\):']
omit = ["tests/*"]

[tool.pytest.ini_options]
addopts = '--cov=. -p no:warnings --cov-report term-missing'
